--- a/packages/amis-editor-core/scss/control/_event-action.scss
+++ b/packages/amis-editor-core/scss/control/_event-action.scss
@@ -253,6 +253,21 @@
 }
 
 .action-config-dialog {
+  *:not(svg) {
+    font-size: 12px;
+  }
+
+  .common-actions {
+    position: absolute;
+    top: #{px2rem(-41px)};
+    left: #{px2rem(80px)};
+
+    .common-actions-label {
+      line-height: #{px2rem(24px)};
+      margin-right: 4px;
+    }
+  }
+
   .action-config-panel {
     background: #ffffff;
     border: 1px solid #e8e9eb;
