--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -67,6 +67,8 @@
 @import '../components/wrapper';
 @import '../components/status';
 @import '../components/carousel';
+@import '../components/drag-progress';
+@import '../components/sliding';
 @import '../components/image-gallery';
 @import '../components/images';
 @import '../components/input-box';
