--- a/packages/amis-ui/scss/components/form/_location.scss
+++ b/packages/amis-ui/scss/components/form/_location.scss
@@ -132,6 +132,13 @@
   max-width: 100%;
   margin-top: -1px;
   border-color: var(--Form-input-onFocused-borderColor);
+
+  &.#{$ns}PopOver--v-top {
+    margin-top: px2rem(4px);
+  }
+  &.#{$ns}PopOver--v-bottom {
+    margin-bottom: px2rem(4px);
+  }
 }
 
 .#{$ns}MapPicker {
