fix: crud2中列宽调整不生效和开启列宽会始终出现横向滚动条的问题

--- a/packages/amis-ui/scss/components/_table2.scss
+++ b/packages/amis-ui/scss/components/_table2.scss
@@ -677,6 +677,11 @@
           }
         }
       }
+      > thead > tr > .#{$ns}Table-cell-last {
+        .#{$ns}Table-thead-resizable {
+          right: 0;
+        }
+      }
     }
   }
 
