fix: table嵌套在form以及affixHeader模式下自适应问题修复

--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -666,6 +666,7 @@
       flex: 1;
       flex-wrap: wrap;
       font-size: var(--fontSizeLg);
+      min-width: 0;
 
       .#{$ns}ColorPicker {
         > input {
