style: 优化部分组件样式

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -2555,7 +2555,7 @@
   --Divider-text-marginRight: var(--sizes-size-9);
   --Divider-text-marginBottom: var(--sizes-size-0);
 
-  --inputFile-base-des-color: var(--colors-neutral-text-2);
+  --inputFile-base-des-color: var(--Form-description-color);
   --inputFile-base-des-fontSize: var(--fonts-size-7);
   --inputFile-base-des-fontWeight: var(--fonts-weight-6);
   --inputFile-base-des-margin: var(--sizes-base-5);
