style: 页面设计器 配置面板弹窗字体调整

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1783,17 +1783,9 @@ div.ae-DragImage {
   width: px2rem(700px);
   @include panel-sm-content();
 
-  --Form-item-fontSize: #{$Editor-right-panel-font-size};
-  --select-base-default-fontSize: #{$Editor-right-panel-font-size};
-  --select-base-default-option-fontSize: #{$Editor-right-panel-font-size};
-  --Table-thead-fontSize: #{$Editor-right-panel-font-size};
-  --button-size-default-fontSize: #{$Editor-right-panel-font-size};
-  --checkbox-checkbox-default-fontSize: #{$Editor-right-panel-font-size};
-  --radio-default-default-fontSize: #{$Editor-right-panel-font-size};
-  --radio-default-default-lineHeight: #{$Editor-right-panel-radios-line-height};
-  --Tabs--vertical-fontSize: #{$Editor-right-panel-font-size};
-  --Tabs--vertical-active-fontSize: #{$Editor-right-panel-font-size};
-  --Tabs--vertical-hover-fontSize: #{$Editor-right-panel-font-size};
+  &-title {
+    font-size: px2rem(14px);
+  }
 
   &--CRUD {
     width: px2rem(800px);
