feat(amis-editor): LocationPicker & Picker组件配置面板升级 (#8936)
* feat(amis-editor): Picker配置面板升级 (#8558)

* feat:(editor)picker面板升级

* merge master

---------

Co-authored-by: liuguihua <liuguihua@baidu.com>

* feat: location-picker-editor 优化

* feat: location-picker-editor 点击函数以及文档处理

* feat: location-picker-editor 取消输入框样式

* feat: location-picker-editor 地图ak支持变量映射 (#8881)

Co-authored-by: jiangchunhui <jiangchunhui@baidu.com>

* feat:(amis-editor)locationPicker & Picker组件配置面板升级

---------

Co-authored-by: liuguihua <liuguihua@baidu.com>
Co-authored-by: jiangchunhui <jiangchunhui@baidu.com>
Co-authored-by: hsm-lv <80095014+hsm-lv@users.noreply.github.com>
Co-authored-by: wutong <34541195+igrowp@users.noreply.github.com>
Co-authored-by: 青辉 <66730036+QingHui1229@users.noreply.github.com>

--- a/packages/amis-ui/scss/components/form/_location.scss
+++ b/packages/amis-ui/scss/components/form/_location.scss
@@ -193,3 +193,14 @@
 .tangram-suggestion-main {
   display: none !important;
 }
+
+@media screen and (min-width: 768px) {
+  .#{$ns}LocationPicker {
+    &-value {
+      margin-right: 0;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+  }
+}
