--- a/packages/amis-ui/scss/components/form/_picker.scss
+++ b/packages/amis-ui/scss/components/form/_picker.scss
@@ -93,6 +93,7 @@
     border-color: var(--Pick-base-top-border-color)
       var(--Pick-base-right-border-color) var(--Pick-base-bottom-border-color)
       var(--Pick-base-left-border-color);
+    overflow: auto;
   }
 
   .#{$ns}Picker-values {
@@ -143,6 +144,7 @@
     width: var(--Pick-base-icon-size);
     height: var(--Pick-base-icon-size);
     content: var(--Pick-base-icon);
+    display: flex;
   }
 
   &-clear {
