--- a/packages/amis-ui/scss/components/form/_input-group.scss
+++ b/packages/amis-ui/scss/components/form/_input-group.scss
@@ -2,6 +2,13 @@
   display: inline-flex;
   flex-wrap: nowrap;
 
+  &:hover {
+    div,
+    button {
+      border-color: var(--colors-brand-5) !important;
+    }
+  }
+
   &.#{$ns}Form-control--sizeXs,
   &.#{$ns}Form-control--sizeSm,
   &.#{$ns}Form-control--sizeMd,
@@ -69,7 +76,8 @@
     }
   }
 
-  .#{$ns}TextControl-input {
+  .#{$ns}TextControl-input,
+  .#{$ns}SearchBox {
     flex-basis: 0;
     flex-grow: 1;
     display: inline-flex;
@@ -77,6 +85,7 @@
     &:not(:first-child) {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
+      border-left: none;
     }
 
     &:not(:last-child) {
@@ -101,6 +110,7 @@
     &:first-child .#{$ns}Select {
       border-top-left-radius: var(--InputGroup-select-borderRadius);
       border-bottom-left-radius: var(--InputGroup-select-borderRadius);
+      background-color: var(--colors-neutral-fill-10);
     }
 
     &:last-child .#{$ns}Select {
@@ -128,21 +138,22 @@
     .#{$ns}InputGroup-addOn,
     .#{$ns}TextControl-input,
     .#{$ns}Select,
+    .#{$ns}SearchBox,
     .#{$ns}InputGroup-btn .#{$ns}Button {
       border-color: var(--InputGroup-addOn-onFocused-borderColor);
     }
 
-    .#{$ns}Select {
-      background: var(--InputGroup-select-onFocused-bg);
-    }
+    // .#{$ns}Select {
+    //   background: var(--InputGroup-select-onFocused-bg);
+    // }
 
-    .#{$ns}Select {
-      color: var(--InputGroup-select-onFocused-color);
-    }
+    // .#{$ns}Select {
+    //   color: var(--InputGroup-select-onFocused-color);
+    // }
 
-    .#{$ns}Select-arrow {
-      color: var(--InputGroup-select-onFocused-arrowColor);
-    }
+    // .#{$ns}Select-arrow {
+    //   color: var(--InputGroup-select-onFocused-arrowColor);
+    // }
 
     .#{$ns}InputGroup-addOn {
       color: var(--primary);
