--- a/packages/amis-ui/scss/components/form/_checks.scss
+++ b/packages/amis-ui/scss/components/form/_checks.scss
@@ -36,6 +36,7 @@
       margin-left: var(--gap-sm);
       cursor: pointer;
       display: inline-block;
+      vertical-align: top;
 
       > a {
         // float: right;
