style: 优化table中label字体大小

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -238,6 +238,9 @@
         content: '';
         pointer-events: none;
       }
+      & .label {
+        font-size: 90%;
+      }
     }
 
     &.is-layout-fixed td {
