--- a/packages/amis-ui/scss/components/_pagination.scss
+++ b/packages/amis-ui/scss/components/_pagination.scss
@@ -37,10 +37,28 @@
   }
   .ellipsis {
     cursor: unset;
+    position: relative;
     > a {
       cursor: unset;
-      position: relative;
+      position: absolute;
       top: px2rem(-4px);
+      opacity: 1;
+      transition: all 0.2s;
+    }
+    > span {
+      opacity: 0;  
+      transition: all 0.2s;
+    }
+  }
+  .ellipsis:hover {
+    cursor: pointer;
+    > a {
+      opacity: 0;
+      transition: all 0.2s;
+    }
+    > span {
+      opacity: 1;  
+      transition: all 0.2s;
     }
   }
 
@@ -153,6 +171,44 @@
       }
     }
   }
+
+  &-inputSimple {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: var(--Pagination-height);
+
+    input {
+      min-width: px2rem(40px);
+      width: px2rem(40px);
+      height: var(--Pagination-height);
+      line-height: var(--Pagination-height);
+      border: none;
+      border: var(--borderWidth) solid var(--borderColor);
+      border-radius: var(--borderRadius);
+      padding: var(--Pagination-padding);
+      margin-right: px2rem(8px);
+      text-align: center;
+
+      &:focus,
+      &:hover {
+        outline: none;
+        border-color: var(--primary);
+      }
+    }
+    &-right {
+      display: inline-block;
+      width: px2rem(32px);
+      height: var(--Pagination-height);
+      line-height: var(--Pagination-height);
+      border: var(--borderWidth) solid var(--borderColor);
+      font-size: var(--fontSizeSm);
+      &:hover {
+        color: #666666 !important;
+        cursor: default;
+      }
+    }
+  }
 }
 
 .#{$ns}Pagination-wrap {
@@ -195,4 +251,44 @@
   }
 
   text-align: right;
+}
+
+.#{$ns}Pagination-wrap-size--small {
+  line-height: px2rem(24px);
+
+  .#{$ns}Pagination-item {
+    margin-left: px2rem(4px);
+  
+    > li {  
+      > a,
+      > span {
+        min-width: var(--Pagination-minWidth-sm);
+        height: var(--Pagination-height-sm);
+        line-height: var(--Pagination-height-sm);
+        padding: var(--Pagination-padding-sm);
+      }
+    }
+  
+    .#{$ns}Pagination-inputGroup {
+      height: var(--Pagination-height-sm);
+      &-input {
+        min-width: px2rem(40px);
+        width: px2rem(40px);
+        height: var(--Pagination-height-sm);
+        line-height: var(--Pagination-height-sm);
+        padding: var(--Pagination-padding-sm);
+        margin-left: px2rem(4px);
+      }
+      &-right {
+        height: var(--Pagination-height-sm);
+        line-height: var(--Pagination-height-sm);
+      }
+    }
+  }
+
+  .#{$ns}Pagination-perpage {
+    padding: 0 px2rem(6px);
+    min-height: px2rem(24px);
+    vertical-align: baseline;
+  }
 }
