fix: 「组件」Transfer组件已选项缺少hover背景色

--- a/packages/amis-ui/scss/components/form/_selection.scss
+++ b/packages/amis-ui/scss/components/form/_selection.scss
@@ -95,6 +95,10 @@
     &.is-opened {
       color: var(--Form-select-menu-onActive-color);
       background: var(--Form-select-menu-onActive-bg);
+
+      &:hover {
+        background: var(--Form-select-menu-onHover-bg);
+      }
     }
 
     &.is-disabled {
