styles: InputTag下拉浮层添加最大高度避免超出屏幕

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -3798,6 +3798,8 @@
   --inputTag-option-bg-color: var(--colors-neutral-fill-11);
   --inputTag-option-hover-color: var(--colors-brand-5);
   --inputTag-option-hover-bg-color: var(--colors-brand-10);
+  --inputTag-popover-maxHeight: 300px;
+
 
   --fieldSet-legend-height: var(--sizes-size-9);
   --fieldSet-legend-color: var(--colors-neutral-text-2);
