fix:fix inputrange label css

--- a/packages/amis-ui/scss/components/form/_range.scss
+++ b/packages/amis-ui/scss/components/form/_range.scss
@@ -296,6 +296,10 @@
     border-radius: var(--InputRange-label-border-radius);
     visibility: hidden;
 
+    span {
+      word-break: keep-all;
+    }
+
     &-visible {
       visibility: visible;
     }
