fix: Table、Table2组件列固定宽度时禁止拖拽伸缩

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -184,6 +184,10 @@
     opacity: 0.5;
     z-index: 15;
 
+    &--disabled {
+      cursor: not-allowed;
+    }
+
     &:hover,
     &.is-resizing {
       background: var(--primary);
