--- a/packages/amis-ui/scss/components/_table2.scss
+++ b/packages/amis-ui/scss/components/_table2.scss
@@ -672,6 +672,10 @@
           z-index: 15;
           opacity: 0.5;
 
+          &--disabled {
+            cursor: not-allowed;
+          }
+
           &:hover,
           &.is-resizing {
             background: var(--primary);
