style: 修复DropDownButton下拉选项禁用样式

--- a/packages/amis-ui/scss/components/_dropdown.scss
+++ b/packages/amis-ui/scss/components/_dropdown.scss
@@ -127,7 +127,7 @@
   }
 
   &-menuItem,
-  &-menu:not(.is-mobile) > li {
+  &-menu:not(.is-mobile) > li:not(.is-disabled) {
     &:hover {
       background: var(--DropDown-menuItem-onHover-bg);
       color: var(--DropDown-menuItem-onHover-color);
